[gd_scene load_steps=21 format=2]

[ext_resource path="res://Director.gd" type="Script" id=1]
[ext_resource path="res://ink-files/MainStory.ink" type="Resource" id=2]
[ext_resource path="res://addons/paulloz.ink/InkPlayer.cs" type="Script" id=3]
[ext_resource path="res://UserInterface/text-box.png" type="Texture" id=4]
[ext_resource path="res://BlinkingArrow.tscn" type="PackedScene" id=5]
[ext_resource path="res://UserInterface/character-name-box.png" type="Texture" id=6]
[ext_resource path="res://Theme/theme.tres" type="Theme" id=7]
[ext_resource path="res://TextBox.gd" type="Script" id=8]
[ext_resource path="res://Characters/CharacterDisplayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Backgrounds/industrial_building.jpg" type="Texture" id=10]
[ext_resource path="res://ChoiceSelector.tscn" type="PackedScene" id=11]
[ext_resource path="res://FadingControl.gd" type="Script" id=12]
[ext_resource path="res://SoundSystem.tscn" type="PackedScene" id=14]
[ext_resource path="res://ButtonBar.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00120983, 0.194782 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00120983 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBackground:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.98023e-08, 0.491794 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NameBackground:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.268581 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 16.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("NameBackground:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.000604913, 0.268581 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 322, 338.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.130661, 0.283704, 0.493004 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.19 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NameBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00152054, 0.210595 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, -6.05991e-08 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.00304108, 0.152814, 0.265334 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "setup"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.000760269 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NameBackground:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NameBackground:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.00304108 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("NameBackground:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.00304108 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 338.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Scrim:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Scrim:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "setup"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Scrim:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Director" type="Node"]
script = ExtResource( 1 )

[node name="InkPlayer" type="Node" parent="."]
script = ExtResource( 3 )
autoLoadStory = true
story = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true

[node name="CharacterDisplayer" parent="." instance=ExtResource( 9 )]

[node name="TextBox" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -140.0
theme = ExtResource( 7 )
texture = ExtResource( 4 )
expand = true
script = ExtResource( 8 )

[node name="ButtonBar" type="HBoxContainer" parent="TextBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -405.0
margin_top = -39.0
margin_right = 405.0
margin_bottom = -16.0
focus_mode = 2
mouse_filter = 2
custom_constants/separation = 25
script = ExtResource( 15 )

[node name="NameBackground" type="TextureRect" parent="TextBox"]
modulate = Color( 1, 1, 1, -6.05992e-08 )
margin_top = -34.0
margin_right = 338.0
margin_bottom = 53.0
texture = ExtResource( 6 )
expand = true
script = ExtResource( 12 )

[node name="NameLabel" type="Label" parent="TextBox/NameBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -42.5
margin_right = 150.0
margin_bottom = 28.5
mouse_filter = 1
text = "Sophia"
align = 1
valign = 1
script = ExtResource( 12 )

[node name="TextLabel" type="RichTextLabel" parent="TextBox"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -349.0
margin_top = -23.5
margin_right = 349.0
margin_bottom = 55.5
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "Hi, I'm Sophia. Who are you?"
meta_underlined = false
text = "Hi, I'm Sophia. Who are you?"
scroll_active = false

[node name="BlinkingArrow" parent="TextBox/TextLabel" instance=ExtResource( 5 )]
margin_left = -38.0
margin_top = -39.0
mouse_filter = 1

[node name="ChoiceSelector" parent="TextBox" instance=ExtResource( 11 )]
margin_left = 312.0
margin_top = 20.0
margin_right = -267.0
margin_bottom = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextBox"]
autoplay = "setup"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
anims/setup = SubResource( 3 )
__meta__ = {
"_editor_description_": "TextBox animations."
}

[node name="Tween" type="Tween" parent="TextBox"]
__meta__ = {
"_editor_description_": "Text display Tween."
}

[node name="Scrim" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 4 )
anims/fade_out = SubResource( 5 )
anims/setup = SubResource( 6 )

[node name="SoundSystem" parent="." instance=ExtResource( 14 )]
